Fix bug causing gap between navbar and menu on smaller screens
Reduced top CSS property on nav menu to sit against reduced navbar height

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -300,7 +300,7 @@ main {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 140px;
+    top: 100px;
     gap: 0;
     flex-direction: column;
     background-color: var(--accent-colour);
